--- a/router.yml
+++ b/router.yml
@@ -1,3 +1,4 @@
+# $schema: configuration_schema.json
 headers:
   all:
     request:
@@ -11,6 +12,12 @@ telemetry:
   instrumentation:
     spans:
       mode: spec_compliant
+  exporters:
+    tracing:
+      propagation:
+        baggage: true
+        trace_context: true
+
 
 #coprocessor:
 #  url: http://localhost:3000
