--- a/router.yml
+++ b/router.yml
@@ -1,3 +1,4 @@
+# $schema: configuration_schema.json
 headers:
   all:
     request:
@@ -11,6 +12,11 @@ telemetry:
   instrumentation:
     spans:
       mode: spec_compliant
+
+#  exporters:
+#    tracing:
+#      zipkin:
+#        enabled: true
 
 #coprocessor:
 #  url: http://localhost:3000
@@ -29,3 +35,10 @@ telemetry:
 #          limit: 1
 #      redis:
 #        urls: [ "redis://localhost:6379" ]
+
+#preview_entity_cache:
+#  enabled: true
+#  redis:
+#    urls: ["redis://localhost:6379"]
+#    timeout: 2ms
+#    ttl: 24h
