--- a/coprocessor/package.json
+++ b/coprocessor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "router-playground-coprocessor",
+  "name": "@apollosolutions/router-playground-coprocessor",
   "version": "1.0.0",
   "description": "A coprocessor example for the router",
   "main": "index.js",
@@ -10,6 +10,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.19.1"
   }
 }
